--- a/app/src/main/res/layout/activity_teacher_home.xml
+++ b/app/src/main/res/layout/activity_teacher_home.xml
@@ -1,7 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bguiblue"
+    android:padding="16dp">
 
-</LinearLayout>
+    <!-- Greeting -->
+    <TextView
+        android:id="@+id/greeting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="    Hey Mr. Instructor"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="80dp" />
+
+    <!-- Create Course Button -->
+    <Button
+        android:id="@+id/btn_create_course"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:text="Create Course"
+        android:background="@drawable/rounded_button_green"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:layout_below="@id/greeting"
+        android:layout_marginTop="30dp" />
+
+    <!-- View Students Button -->
+    <Button
+        android:id="@+id/btn_my_courses"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:text="My Courses"
+        android:background="@drawable/rounded_button_blue"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:layout_below="@id/btn_view_students"
+        android:layout_marginTop="20dp" />
+    <Button
+        android:id="@+id/btn_view_students"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:text="View Students"
+        android:background="@drawable/rounded_button_orange"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:layout_below="@id/btn_create_course"
+        android:layout_marginTop="20dp" />
+
+    <!-- My Courses Button -->
+
+
+    <!-- Bottom Navigation -->
+    <LinearLayout
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:background="@android:color/white"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/ic_home"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_home"
+            android:contentDescription="Home"
+            android:padding="10dp"
+            android:scaleType="centerInside" />
+
+        <ImageView
+            android:id="@+id/ic_inbox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_inbox"
+            android:contentDescription="Inbox"
+            android:padding="10dp"
+            android:scaleType="centerInside" />
+
+        <ImageView
+            android:id="@+id/ic_profile"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_profile"
+            android:contentDescription="Profile"
+            android:padding="10dp"
+            android:scaleType="centerInside" />
+    </LinearLayout>
+</RelativeLayout>
