--- a/app/src/main/res/layout/activity_teacher_profile.xml
+++ b/app/src/main/res/layout/activity_teacher_profile.xml
@@ -63,7 +63,7 @@
             android:id="@+id/profile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rupak Varma"
+            android:text="Guru Sri. Raghunathan Iyer"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
@@ -74,7 +74,7 @@
             android:id="@+id/profile_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="rupak@gmail.com"
+            android:text="RaghunathanIyer@gmail.com"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             android:layout_marginBottom="24dp" />
@@ -153,7 +153,6 @@
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:layout_marginBottom="0dp"
         android:background="@android:color/white"
         android:gravity="center">
 
@@ -164,17 +163,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_home"
             android:contentDescription="Home"
-            android:padding="16dp"
-            android:scaleType="centerInside" />
-
-        <ImageView
-            android:id="@+id/ic_courses"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_courses"
-            android:contentDescription="Courses"
-            android:padding="16dp"
+            android:padding="10dp"
             android:scaleType="centerInside" />
 
         <ImageView
@@ -184,7 +173,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_inbox"
             android:contentDescription="Inbox"
-            android:padding="16dp"
+            android:padding="10dp"
             android:scaleType="centerInside" />
 
         <ImageView
@@ -194,7 +183,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_profile"
             android:contentDescription="Profile"
-            android:padding="16dp"
+            android:padding="10dp"
             android:scaleType="centerInside" />
     </LinearLayout>
 </RelativeLayout>
