--- a/app/src/main/res/layout/activity_teacher_viewstudents.xml
+++ b/app/src/main/res/layout/activity_teacher_viewstudents.xml
@@ -2,102 +2,88 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bguiblue">
+    android:background="@drawable/bguiblue"
+    android:padding="16dp">
 
-    <!-- Top Bar -->
+    <!-- Back Button -->
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:src="@drawable/ic_backblack"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="60dp"
+        android:layout_marginStart="4dp" />
+
+    <!-- Page Title -->
     <TextView
-        android:id="@+id/inbox_title"
+        android:id="@+id/page_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Indox"
+        android:text="Enrolled Students"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:fontFamily="serif"
         android:textColor="@android:color/black"
-        android:layout_marginTop="80dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/back_button"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="30dp" />
 
-    <!-- Chat/Call Toggle -->
-    <LinearLayout
-        android:id="@+id/toggle_buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/inbox_title"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/btn_chat"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="All Chats"
-            android:background="@drawable/rounded_button_green"
-            android:textColor="@android:color/white"
-            android:layout_marginEnd="5dp" />
-
-    </LinearLayout>
-
-    <!-- Chat List -->
+    <!-- Scrollable Student List -->
     <ScrollView
-        android:id="@+id/chat_scroll"
+        android:id="@+id/scroll_view_students"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toggle_buttons"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="60dp">
+        android:layout_below="@id/page_title"
+        android:layout_marginTop="12dp"
+        android:fillViewport="true"
+        android:layout_marginBottom="10dp">
 
         <LinearLayout
+            android:id="@+id/student_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
-            <!-- Chat Item Example -->
+            <!-- Student Card (Repeat dynamically) -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical"
                 android:background="@drawable/rounded_button_white"
-                android:layout_marginBottom="12dp"
-                android:padding="10dp">
+                android:padding="12dp"
+                android:layout_marginBottom="16dp"
+                android:elevation="4dp">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@drawable/ic_profile"
-                    android:background="@android:color/black"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:layout_marginEnd="12dp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingStart="12dp">
+                    android:orientation="vertical">
 
                     <TextView
-                        android:text="Guru Sri. Raghunathan Iyer"
+                        android:text="Rupak Varma"
                         android:textStyle="bold"
-                        android:textSize="14sp"
                         android:textColor="@android:color/black"
-                        android:layout_height="20dp" android:layout_width="300dp"/>
+                        android:textSize="18sp"
+                        android:layout_marginBottom="4dp"  android:layout_height="match_parent" android:layout_width="match_parent"/>
 
                     <TextView
-                        android:text="Hi, Good Evening Bro.!"
+                        android:text="rupak@gmail.com"
                         android:textColor="@android:color/darker_gray"
-                        android:layout_height="50dp" android:layout_width="300dp"
-                        android:textSize="12sp" />
+                        android:textSize="13sp"  android:layout_height="match_parent" android:layout_width="match_parent"/>
                 </LinearLayout>
-
-                <TextView
-                    android:text="14:59"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="12sp"  android:layout_height="50dp" android:layout_width="50dp"/>
             </LinearLayout>
 
-            <!-- Repeat chat items as needed -->
+            <!-- Repeat more student blocks dynamically -->
 
         </LinearLayout>
     </ScrollView>
@@ -117,17 +103,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_home"
             android:contentDescription="Home"
-            android:padding="16dp"
-            android:scaleType="centerInside" />
-
-        <ImageView
-            android:id="@+id/ic_courses"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_courses"
-            android:contentDescription="Courses"
-            android:padding="16dp"
+            android:padding="10dp"
             android:scaleType="centerInside" />
 
         <ImageView
@@ -137,7 +113,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_inbox"
             android:contentDescription="Inbox"
-            android:padding="16dp"
+            android:padding="10dp"
             android:scaleType="centerInside" />
 
         <ImageView
@@ -147,7 +123,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_profile"
             android:contentDescription="Profile"
-            android:padding="16dp"
+            android:padding="10dp"
             android:scaleType="centerInside" />
     </LinearLayout>
 </RelativeLayout>
